syntax = "proto3";

message Cashflow {
     double int_amt = 1;
     double prin_amt = 2;
     int64 date = 3;
}

message AccountWithCashflows {
    string deal_no = 1;
    string bond_issuance = 2;
    string isin = 3;
    int64 issuance_dt = 4;
    string branch_entity = 5;
    string desk = 6;
    string portfolio_type = 7;
    string category = 8;
    string security_type = 9;
    string slrnon_slr = 10;
    string short_name = 11;
    string secured_unsecured = 12;
    double rt = 13;
    int64 nxt_call_dt = 14;
    int64 nxt_put_dt = 15;
    string agency = 16;
    string rating = 17;
    string agency_of_current_rating = 18;
    string listed_unlisted = 19;
    int64 mat_dt = 20;
    double conversion_rt_lcy = 21;
    string ccy = 22;
    double bv_after_amortisation = 23;
    double wap = 24;
    double laf_and_msf_ost_fv = 25;
    double laf_and_msf_ost_bv = 26;
    double reverse_laf_ost_fv = 27;
    double reverse_repo_ost_fv = 28;
    double collateral_placed_fv = 29;
    double encumbered_fv = 30;
    double encumbered_bv = 31;
    double ytm = 32;
    string basis = 33;
    string issue_country = 34;
    string domicile_country = 35;
    string category1 = 36;
    string category2 = 37;
    string category3 = 38;
    string category4 = 39;
    string industry_code = 40;
    string taxability = 41;
    double air_till_dt = 42;
    double modified_duration = 43;
    string int_coupontype = 44;
    int64 nxt_rep_dt = 45;
    string sec_grp = 46;
    string sec_typ = 47;
    string sec_issuer = 48;
    string sec_guaranteed = 49;
    string mrkt = 50;
    string idx_label = 51;
    string bd_cat = 52;
    string bd_typ = 53;
    string lstd = 54;
    string npa = 55;
    int64 cf_dt = 56;
    string alm_line = 57;
    string ia_line = 58;
    double cf_int_amt = 59;
    double cf_prin_amt = 60;
    string crnt_rating = 61;
    int64 lst_cpn_dt = 62;
    int64 nxt_cpn_dt = 63;
    double conv_rt_inr = 64;
    double reval_val = 65;
    double reval_profit = 66;
    double reval_loss = 67;
    string issuer = 68;
    string affiliated_to = 69;
    string rating_master_rating = 70;
    string concat = 71;
    int64 tenor = 72;
    string blr_eligibility = 73;
    string level_1 = 74;
    string level_2a_pse = 75;
    string level_2a_corp_bonds = 76;
    string level_2a_corp_cps = 77;
    string npa_yes_no = 78;
    string level_2b = 79;
    string others = 80;
    string comp_freq = 81;
    string isin_flag = 82;
    string bucket = 83;
    repeated Cashflow cashflows = 84;
}
